* Kleinere Build-Verbesserungen.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@491 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/FacesTest/WebContent/menu.xhtml
+++ b/JEE7/FacesTest/WebContent/menu.xhtml
@@ -8,6 +8,7 @@
 		<li><h:link value="#{msg.main}"   outcome="/index.xhtml" /></li>
 		<ui:fragment rendered="#{sessionController.loggedIn}">
 			<li><h:link value="#{msg.change}" outcome="/admin/index.xhtml" /></li>
+			<li><h:link value="#{msg['info.title']}"   outcome="/info/index.xhtml" /></li>
 			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml"/></li>
 		</ui:fragment>
 	</ul>
