* update der seite
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@618 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jee.websitenew/aboutus.html
+++ b/Website/de.itemis.jee.websitenew/aboutus.html
@@ -7,8 +7,8 @@ layout: default
 
 		<hr>
 		<!--table one starts-->
-		<div class="span1">&nbsp;</div>
-		<div class="span5">
+		<div class="col-md-1">&nbsp;</div>
+		<div class="col-md-5">
 			<div id="aboutUsText">
 				<h3>
 					<a href="http://www.xing.com/profile/Steffen_Mork">Steffen A.
@@ -48,7 +48,7 @@ layout: default
 			</div>
 		</div>
 
-		<div class="span5">
+		<div class="col-md-5">
 			<div id="aboutUsText">
 				<h3>
 					<a href="http://www.xing.com/profile/Dominik_Pieper">Dominik
@@ -79,7 +79,7 @@ layout: default
 				</p>
 			</div>
 		</div>
-		<div class="span1">&nbsp;</div>
+		<div class="col-md-1">&nbsp;</div>
 	</div>
 	<div class="container clearfix"></div>
 </div>
