--- a/Website/de.itemis.jee.websitenew/index.html
+++ b/Website/de.itemis.jee.websitenew/index.html
@@ -4,24 +4,25 @@ layout: default
 <!--Container-->
 <div id="header_wrapper">
   <div class="container">
-  <div class="flexslider image-slider">
-    <div class="span5 slide">
-      <h2>
-        JEE Generator
-      </h2>
-      <br />
-      <p><b>Java Enterprise Entwicklung leicht gemacht!</b> Schauen Sie sich zur Einführung dieses Video an oder schauen Sie in unsere <a href="{{site.baseurl}}/documentation/index.html">Dokumentation</a></p>
-      <a href="download.html" class="btn_download"></a>
-    </div>
-    <div class="span6">
-      <div class="introduction">
-        <a href="#"><img src="{{ site.baseurl }}/images/videoThumbnail.png"
-          alt="image" id="intro-screenshot"/></a> 
-        <a href="http://www.youtube.com/watch?v=spnmScZUJHc"
-          data-rel="prettyPhoto" title="Introduction" class="zoom zoom_icon"></a>
-      </div>
-    </div>
-  </div>
+	  <div class="image-slider">
+	    <div class="col-md-5 slide">
+	      <h2>
+	        JEE Generator
+	      </h2>
+	      <br />
+	      <p><b>Java Enterprise Entwicklung leicht gemacht!</b> Schauen Sie sich zur Einführung dieses Video an oder schauen Sie in unsere <a href="{{site.baseurl}}/documentation/index.html">Dokumentation</a></p>
+	
+	      <a href="download.html" class="btn_download"></a>
+	    </div>
+	    <div class="col-md-6">
+	      <div class="introduction">
+	        <a href="#"><img class="img-responsive" src="{{ site.baseurl }}/images/videoThumbnail.png"
+	          alt="image" id="intro-screenshot"/></a> 
+	        <a href="http://www.youtube.com/watch?v=spnmScZUJHc"
+	          data-rel="prettyPhoto" title="Introduction" class="zoom zoom_icon"></a>
+	      </div>
+	    </div>
+	  </div>
   </div>
   <div class="container">
     <p>Die JEE-Generatoren sind in der Lage, eine komplette JEE-Web-Applikation (Java EE 6 oder Java EE 7) aus einem einfachen Modell zu generieren.
@@ -32,19 +33,19 @@ layout: default
 <div id="features">
   <div class="container">
     <div class="row">
-      <div class="span12">
+      <div class="col-md-12">
         <br /> <br />
         <h1>Unterstützte Features</h1>
         <br />
       </div>
-      <div class="span6">
+      <div class="col-md-6">
         <h4>Volle Unterstützung des JEE-Standards</h4>
         <p>
 			Die JEE-Generatoren erzeugen Code für XHTML, Java Server Faces, EJB und
 			JPA. Eigener Code und Generator-Code kann beliebig gemischt werden.
         </p>
       </div>
-      <div class="span6">
+      <div class="col-md-6">
         <h4>Lokalisierung und Internationalisierung</h4>
         <p>
         	Länderspezifische Anpassungen werden auf einfache Art und Weise
@@ -52,7 +53,7 @@ layout: default
 			eingestellte Sprache.
         </p>
       </div>
-      <div class="span6">
+      <div class="col-md-6">
         <h4>Rollenbasierte Sicherheit mit JAAS</h4>
         <p>
           	Durch rollenbasierte Sicherheit können Benutzer mit unterschiedlichen
@@ -60,7 +61,7 @@ layout: default
 			sehen darf.
         </p>
       </div>
-      <div class="span6">
+      <div class="col-md-6">
         <h4>Content Assist und Quick Fixes</h4>
         <p>
         	Der JEE-Generator unterstützt viele Features, um den Umgang zu
