--- a/Website/de.itemis.jee.websitenew/index.html
+++ b/Website/de.itemis.jee.websitenew/index.html
@@ -5,7 +5,7 @@ layout: default
 <div id="header_wrapper">
   <div class="container">
 	  <div class="image-slider">
-	    <div class="col-md-5 slide">
+	    <div class="col-md-5">
 	      <h2>
 	        JEE Generator
 	      </h2>
@@ -13,6 +13,7 @@ layout: default
 	      <p><b>Java Enterprise Entwicklung leicht gemacht!</b> Schauen Sie sich zur Einführung dieses Video an oder schauen Sie in unsere <a href="{{site.baseurl}}/documentation/index.html">Dokumentation</a></p>
 	
 	      <a href="download.html" class="btn_download"></a>
+	      <span class="clearfix"></span>
 	    </div>
 	    <div class="col-md-6">
 	      <div class="introduction">
@@ -34,9 +35,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <br /> <br />
         <h1>Unterstützte Features</h1>
-        <br />
       </div>
       <div class="col-md-6">
         <h4>Volle Unterstützung des JEE-Standards</h4>
