* Layout grundlegend überarbeitet.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@647 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jee.websitenew/index.html
+++ b/Website/de.itemis.jee.websitenew/index.html
@@ -2,71 +2,76 @@
 layout: default
 ---
 <!--Container-->
-<div id="header_wrapper">
-  <div class="container">
-	  <div class="image-slider">
-	    <div class="col-md-5">
-	      <h2>
-	        JEE Generator
-	      </h2>
-	      <br />
-	      <p><b>Java Enterprise Entwicklung leicht gemacht!</b> Schauen Sie sich zur Einführung dieses Video an oder schauen Sie in unsere <a href="{{site.baseurl}}/documentation/index.html">Dokumentation</a></p>
-	
-	      <a href="download.html" class="btn_download"></a>
-	      <span class="clearfix"></span>
-	    </div>
-	    <div class="col-md-6">
-	      <div class="introduction">
-	        <a href="#"><img class="img-responsive" src="{{ site.baseurl }}/images/videoThumbnail.png"
-	          alt="image" id="intro-screenshot"/></a> 
-	        <a href="http://www.youtube.com/watch?v=spnmScZUJHc"
-	          data-rel="prettyPhoto" title="Introduction" class="zoom zoom_icon"></a>
-	      </div>
-	    </div>
-	  </div>
-  </div>
-  <div class="container">
-    <p>Die JEE-Generatoren sind in der Lage, eine komplette JEE-Web-Applikation (Java EE 6 oder Java EE 7) aus einem einfachen Modell zu generieren.
-    Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfügbar. Für Java EE 6 und Java EE 7 stehen getrennte Plugins zur Verfügung.
-  </div>
-</div>
+<div id="page">
+	<div class="index-banner banner">
+		<div class="container clearfix">
+			<div class="col-md-5">
+				<h2>JEE Generator</h2>
+				<p>
+<b>Java Enterprise Entwicklung leicht gemacht!</b>
+Entwickeln Sie auf Basis einer einfachen Modelldatei eine komplette
+JEE-Webanwendung. Schauen Sie sich zur Einführung dieses Video an oder lesen Sie in unsere <a href="{{site.baseurl}}/documentation/index.html">Dokumentation</a>
+				</p>
+				<a href="download.html" class="btn_download"></a>
+				<span class="clearfix"></span>
+			</div>
+			<div class="col-md-6">
+				<div class="introduction">
+					<a href="#"><img class="img-responsive" src="{{ site.baseurl }}/images/videoThumbnail.png"
+						alt="image" id="intro-screenshot"/></a> 
+					<a href="http://www.youtube.com/watch?v=spnmScZUJHc"
+						data-rel="prettyPhoto" title="Introduction" class="zoom zoom_icon"></a>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<p>
+Die JEE-Generatoren sind in der Lage, eine komplette JEE-Web-Applikation
+(Java EE 6 oder Java EE 7) aus einem einfachen Modell zu generieren.  Der
+JEE-Generator erzeugt alle Artefakte von der Business Logik angefangen bis
+zum Presentation Layer samt Deskriptoren.  Das Framework wurde mit
+<a href="http://xtext.org">Xtext</a>
+realisiert und ist als Eclipse-Plugin verfügbar.  Für Java EE 6 und Java EE
+7 stehen getrennte Plugins zur Verfügung.
+			</p>
+		</div>
+	</div>
 
-<div id="features">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>Unterstützte Features</h1>
-      </div>
-      <div class="col-md-6">
-        <h4>Volle Unterstützung des JEE-Standards</h4>
-        <p>
-			Die JEE-Generatoren erzeugen Code für XHTML, Java Server Faces, EJB und
-			JPA. Eigener Code und Generator-Code kann beliebig gemischt werden.
-        </p>
-      </div>
-      <div class="col-md-6">
-        <h4>Lokalisierung und Internationalisierung</h4>
-        <p>
-        	Länderspezifische Anpassungen werden auf einfache Art und Weise
-			unterstützt. Die Anwendung benutzt automatisch die im Browser
-			eingestellte Sprache.
-        </p>
-      </div>
-      <div class="col-md-6">
-        <h4>Rollenbasierte Sicherheit mit JAAS</h4>
-        <p>
-          	Durch rollenbasierte Sicherheit können Benutzer mit unterschiedlichen
-			Rollen unterstützt werden. Jeder sieht in der Oberfläche nur das, was er
-			sehen darf.
-        </p>
-      </div>
-      <div class="col-md-6">
-        <h4>Content Assist und Quick Fixes</h4>
-        <p>
-        	Der JEE-Generator unterstützt viele Features, um den Umgang zu
-			erleichtern. Er nutzt implizit Features vom <a href="http://xtext.org">Xtext-Framework</a>
-        </p>
-      </div>
-    </div>
-  </div>
+	<div class="container clearfix">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Unterstützte Features</h1>
+			</div>
+			<div class="col-md-6">
+				<h3>Volle Unterstützung des JEE-Standards</h3>
+				<p>
+Die JEE-Generatoren erzeugen Code für XHTML, Java Server Faces, EJB und
+JPA. Eigener Code und Generator-Code kann beliebig gemischt werden.
+				</p>
+			</div>
+			<div class="col-md-6">
+				<h3>Lokalisierung und Internationalisierung</h3>
+				<p>
+Länderspezifische Anpassungen werden auf einfache Art und Weise
+unterstützt. Die Anwendung benutzt automatisch die im Browser
+eingestellte Sprache.
+				</p>
+			</div>
+			<div class="col-md-6">
+				<h3>Rollenbasierte Sicherheit mit JAAS</h3>
+				<p>
+Durch rollenbasierte Sicherheit können Benutzer mit unterschiedlichen
+Rollen unterstützt werden. Jeder sieht in der Oberfläche nur das, was er
+sehen darf.
+				</p>
+			</div>
+			<div class="col-md-6">
+				<h3>Content Assist und Quick Fixes</h3>
+				<p>
+Der JEE-Generator unterstützt viele Features, um den Umgang zu
+erleichtern. Er nutzt implizit Features vom <a href="http://xtext.org">Xtext-Framework</a>
+				</p>
+			</div>
+		</div>
+	</div>
 </div>
