--- a/Website/de.itemis.jee.websitenew/index.html
+++ b/Website/de.itemis.jee.websitenew/index.html
@@ -15,7 +15,7 @@ JEE-Webanwendung. Schauen Sie sich zur Einführung dieses Video an oder lesen Si
 				<a href="download.html" class="btn_download"></a>
 				<span class="clearfix"></span>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<div class="introduction">
 					<a href="#"><img class="img-responsive" src="{{ site.baseurl }}/images/videoThumbnail.png"
 						alt="image" id="intro-screenshot"/></a> 
@@ -25,7 +25,8 @@ JEE-Webanwendung. Schauen Sie sich zur Einführung dieses Video an oder lesen Si
 			</div>
 		</div>
 		<div class="container">
-			<p>
+			<div class="col-md-10">
+				<p>
 Die JEE-Generatoren sind in der Lage, eine komplette JEE-Web-Applikation
 (Java EE 6 oder Java EE 7) aus einem einfachen Modell zu generieren.  Der
 JEE-Generator erzeugt alle Artefakte von der Business Logik angefangen bis
@@ -33,23 +34,24 @@ zum Presentation Layer samt Deskriptoren.  Das Framework wurde mit
 <a href="http://xtext.org">Xtext</a>
 realisiert und ist als Eclipse-Plugin verfügbar.  Für Java EE 6 und Java EE
 7 stehen getrennte Plugins zur Verfügung.
-			</p>
+				</p>
+			</div>
 		</div>
 	</div>
 
 	<div class="container clearfix">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-10">
 				<h1>Unterstützte Features</h1>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<h3>Volle Unterstützung des JEE-Standards</h3>
 				<p>
 Die JEE-Generatoren erzeugen Code für XHTML, Java Server Faces, EJB und
 JPA. Eigener Code und Generator-Code kann beliebig gemischt werden.
 				</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<h3>Lokalisierung und Internationalisierung</h3>
 				<p>
 Länderspezifische Anpassungen werden auf einfache Art und Weise
@@ -57,7 +59,7 @@ unterstützt. Die Anwendung benutzt automatisch die im Browser
 eingestellte Sprache.
 				</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<h3>Rollenbasierte Sicherheit mit JAAS</h3>
 				<p>
 Durch rollenbasierte Sicherheit können Benutzer mit unterschiedlichen
@@ -65,7 +67,7 @@ Rollen unterstützt werden. Jeder sieht in der Oberfläche nur das, was er
 sehen darf.
 				</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<h3>Content Assist und Quick Fixes</h3>
 				<p>
 Der JEE-Generator unterstützt viele Features, um den Umgang zu
