--- a/Website/de.itemis.jee.websitenew/aboutus.html
+++ b/Website/de.itemis.jee.websitenew/aboutus.html
@@ -3,10 +3,12 @@ layout: default
 ---
 <div id="page">
 	<div class="container clearfix">
-		<h2>Über uns</h2>
+		<div class="col-md-10">
+			<h2>Über uns</h2>
+		</div>
 
 		<hr>
-		<!--table one starts-->
+
 		<div class="col-md-5">
 			<div id="aboutUsText">
 				<h3>
