* fix documentation link on index.html
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@683 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jeegen.website/index.html
+++ b/Website/de.itemis.jeegen.website/index.html
@@ -10,7 +10,7 @@ layout: default
 				<p>
 <b>Java Enterprise Entwicklung leicht gemacht!</b>
 Entwickeln Sie auf Basis einer einfachen Modelldatei eine komplette
-JEE-Webanwendung. Schauen Sie sich zur Einführung dieses Video an oder lesen Sie in unsere <a href="{{site.baseurl}}/documentation/index.html">Dokumentation</a>
+JEE-Webanwendung. Schauen Sie sich zur Einführung dieses Video an oder lesen Sie in unsere <a href="{{site.baseurl}}/documentation.html">Dokumentation</a>
 				</p>
 				<a href="download.html" class="btn_download"></a>
 				<span class="clearfix"></span>
