* ändern der urls auf .org
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@686 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jeegen.website/aboutus.html
+++ b/Website/de.itemis.jeegen.website/aboutus.html
@@ -37,7 +37,7 @@ layout: default
 				</p>
 				<p>
 					Seit 2012 arbeitet Steffen an den <a
-						href="http://www.jee-generator.de">JEE-Generatoren</a>, der
+						href="http://www.jee-generator.org">JEE-Generatoren</a>, der
 					modellbasiert ein einfaches Prototyping für Web-Anwendungen
 					ermöglicht. Einige dieser Web-Anwendungen werden hausintern
 					verwendet, um die Produktivität zu erhöhen.
@@ -63,7 +63,7 @@ layout: default
 					Abteilung für Infrastruktur und Beschaffung.</p>
 				<p>
 					Seit 2012 arbeitet Dominik mit an den <a
-						href="http://www.jee-generator.de">JEE-Generatoren</a>, der
+						href="http://www.jee-generator.org">JEE-Generatoren</a>, der
 					modellbasiert ein einfaches Prototyping für Web-Anwendungen
 					ermöglicht. Der generierte Prototyp lässt sich einfach für
 					beliebige Anwendungsfälle erweitern. Der JEE6-Generator wird intern
