--- a/JEE6/org.jeegen.jee6.dbauth/WebContent/error404.xhtml
+++ b/JEE6/org.jeegen.jee6.dbauth/WebContent/error404.xhtml
@@ -2,7 +2,7 @@
 
 
 <!-- ===== Created by JEE6-Generator $Id$ ===== -->
-<!-- == Copyright (C) 2013  itemis AG == --> 
+<!-- == Copyright (C) 2015  Steffen A. Mork, Dominik Pieper == --> 
 
 
 	<ui:composition template="/layout.xhtml">
