--- a/JEE7/org.jeegen.jee7.dbauth/WebContent/menu.xhtml
+++ b/JEE7/org.jeegen.jee7.dbauth/WebContent/menu.xhtml
@@ -2,8 +2,9 @@
 		xmlns:f="http://java.sun.com/jsf/core"
 		xmlns:h="http://java.sun.com/jsf/html"
 		xmlns:ui="http://java.sun.com/jsf/facelets">
+
 	<!-- ===== Created by JEE6-Generator $Id$ ===== -->
-	<!-- == Copyright (C) 2013  itemis AG == --> 
+	<!-- == Copyright (C) 2015  Steffen A. Mork, Dominik Pieper == --> 
 	<h2>#{msg.menue}</h2>
 	<ul>
 		<li><h:link value="#{msg.main}" outcome="/index.xhtml" /></li>
