--- a/JEE7/org.jeegen.jee7.dbauth/WebContent/user/index.xhtml
+++ b/JEE7/org.jeegen.jee7.dbauth/WebContent/user/index.xhtml
@@ -2,8 +2,9 @@
 		xmlns:f="http://java.sun.com/jsf/core"
 		xmlns:h="http://java.sun.com/jsf/html"
 		xmlns:ui="http://java.sun.com/jsf/facelets">
+
 	<!-- ===== Created by JEE6-Generator $Id$ ===== -->
-	<!-- == Copyright (C) 2013  itemis AG == --> 
+	<!-- == Copyright (C) 2015  Steffen A. Mork, Dominik Pieper == --> 
 <ui:composition template="/layout.xhtml">
 	<ui:define name="title">#{msg['user.title']}</ui:define>
 	<ui:define name="content">
